# agentrust

./: .gitignore  LICENSE  PROTOCOL.md  README.md  pyproject.toml
src/agentrust/: __init__.py  cli.py  crypto.py  scanner.py
test_skills/: clean_skill.py  evil_skill.py
