[project]
name = "agentrust"
version = "0.1.0"
description = "A trust protocol for autonomous AI agents"
readme = "README.md"
authors = [
    { name = "Boey", email = "boey@pure.local" }
]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=49.0.0",
]

[project.scripts]
agentrust = "agentrust:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
